# mcp-router

./: .env.example  .gitignore  .mcp.json  Dockerfile  HISTORY.md  README.md  REFACTOR_PLAN.md  docker-compose.yml  mcp.json  package-lock.json  package.json  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md  skills
client-configs/: claude-desktop.json  obsidian-mcp.json  raycast-mcp-query.sh  vscode-mcp.json
configs/: enhancement-rules.json  mcp-servers.json
docs/: ARCHITECTURE.md  HISTORY.md  MCP-ROUTER-SPEC.md  OBSIDIAN-GUIDE.md  README.md  REFACTOR_PLAN.md
docs/decisions/: 000-template.md  001-use-fastapi.md
docs/scratch/: MCP-ROUTER-SPEC-Feedback.md  qdrant-indexing-setup.md  research-part-1.md  research-part-2.md  sketch-doc.md
router/: __init__.py  cache.py  circuit_breaker.py  config.py  dashboard.py  main.py  models.py  registry.py  sse.py
router/adapters/: __init__.py  stdio.py
router/middleware/: __init__.py  enhance.py
router/pipelines/: __init__.py  documentation.py
scripts/: create-api-keys.sh  gen-env-from-ks.sh
scripts/.claude/: settings.local.json
templates/: dashboard.html
templates/partials/: activity.html  breakers.html  health.html  stats.html
